Card: remove one of addChangedCardTypes functions